# embodied-ai-deployment

./: .gitignore  CLAUDE.md  COSTS.md  README.md  pyproject.toml
experiments/000-baseline-rollout/: eval_info.json
experiments/001-baseline-rollout-n50/: eval_info.json
notes/: 2026-07-13-lesson-diffusion-policy-pusht.md  2026-07-13.md  2026-07-14.md
src/observability/portal/: README.md  app.py  curriculum.py  index.html
