[project]
name = "robot-learning-tutorial"
version = "0.1.0"
description = "Applied companion to Robot Learning: A Tutorial (LeRobot) — checkpoint to deployable, observable system, in simulation."
requires-python = "==3.12.*"
dependencies = [
    # 0.6.0: latest PyPI release at project start (2026-07-13). Extras: pusht
    # (sim task for the baseline rollout), diffusion + smolvla (policies named
    # in the curriculum; ACT ships in lerobot core, no extra needed).
    "lerobot[pusht,diffusion,smolvla]==0.6.0",
    # observability portal (V0): latest stable at time of addition (2026-07-13).
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
]

[project.scripts]
portal = "observability.portal.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only src/observability is a real installable package so far — the other
# src/ subdirs (inspection, policies, serving, acceptance) are still empty
# scaffolding. Extend this list as they gain real code.
packages = ["src/observability"]

[tool.uv.sources]
# darwin (local dev, no GPU) gets CPU wheels; everything else (rented GPU box,
# always Linux+CUDA so far) gets cu128 — matches LeRobot's own default index
# and driver floor (570.86). One lockfile resolves both branches.
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
